--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "mongodb": "^4.1.3"
+    "mongodb": "^4.1.3",
+    "multer": "^1.4.3"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
